fix alignment

--- a/index.css
+++ b/index.css
@@ -7,6 +7,8 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     display: grid;
+    justify-items: left;
+    align-items: left;
     background-color: #F582A7;
 }
   
